# cmake-apple-silicon-count

./: CMakeLists.txt  LICENSE  README.md  apple_silicon_cpu_detect.c  as_detect.c  as_detect_aspl.c
